# sifra-project-es

./: .gitignore  GEMINI.md  README.md  package-lock.json
backend/: Dockerfile  pyproject.toml
backend-python/: .gitignore  pyproject.toml  requirements.txt
backend-python/app/: main.py
backend-python/app/api/v1/: router.py
backend-python/app/api/v1/endpoints/: turmas.py
backend-python/app/core/: config.py
backend-python/app/db/: session.py
backend-python/app/models/: admin.py  aula.py  coordenador.py  discente.py  disciplina.py  docente.py  frequencia.py  turma.py  turma_discente.py  usuario.py
backend-python/app/services/: turma_service.py
backend-python/src/: main.py
backend-python/src/api/v1/: deps.py  router.py
backend-python/src/api/v1/endpoints/: administradores.py  coordenadores.py  discentes.py  docentes.py  frequencia.py  turmas.py  usuarios.py
backend-python/src/core/: config.py  security.py
backend-python/src/models/: admin.py  aula.py  coordenador.py  discente.py  disciplina.py  docente.py  frequencia.py  turma.py  turma_discente.py  usuario.py
backend-python/src/schemas/: administrador.py  auth.py  discente.py  disciplina.py  frequencia.py  turma.py  usuario.py
backend-python/src/services/: administrador_service.py  auth_service.py  discente_service.py  docente_service.py  frequencia_service.py  turma_service.py  usuario_service.py
backend/src/: main.py
backend/src/api/v1/: deps.py
backend/src/api/v1/endpoints/: auth.py  coordenadores.py  discentes.py  docentes.py  frequencia.py  turmas.py
backend/src/core/: config.py
backend/src/db/: session.py
backend/src/models/: __init__.py  admin.py  discente.py  disciplina.py  docente.py  turma.py
backend/src/schemas/: administrador.py  coordenador.py  discente.py  docente.py  usuario.py
backend/src/services/: coordenador_service.py  discente_service.py  docente_service.py  turma_service.py  usuario_service.py
backend/tests/: conftest.py  test_administradores.py  test_auth.py  test_turmas.py  test_usuarios.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: index.css
frontend/src/auth/: LoginPage.js
frontend/src/components/Barra/: Barra.css  Barra.js
frontend/src/components/Card/: Card.css  Card.js
frontend/src/components/Header/: Header.js  (+1 more)
frontend/src/layouts/: UsersLayout.js
frontend/src/service/: api.js  usuarioService.js
(+15 files in other folders)
