[project]
name = "backend-python"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.123.0",
    "gunicorn>=23.0.0",
    "psycopg[binary]>=3.3.0",
    "pydantic-settings>=2.12.0",
    "redis[hiredis]>=7.1.0",
    "rich>=14.2.0",
    "sqlmodel>=0.0.27",
    "uvicorn[standard]>=0.38.0",
]
